# zlagoda

./: .env  .gitattributes  README.md  docker-compose.yaml
src/: .gitignore  .openapi-generator-ignore  Dockerfile  docker-compose.yaml  openapi.yaml  requirements.txt  setup.cfg  setup.py  yoyo.ini
src/api/: _index.yaml
src/migrations/: 0001.basic-tables-setup.sql  0002.security-tables-setup.sql  0003.product-archetype-fix.sql  0004.product-quantity-constrain.sql  1__create_product_category.sql  20240420_01_5iG7K.sql
src/openapi_server/: __main__.py
src/openapi_server/controllers/: customer_card_controller.py  employee_controller.py  product_archetype_controller.py  product_category_controller.py  product_controller.py  receipt_controller.py
src/openapi_server/models/: __init__.py  base_criteria.py  customer_card.py  customer_card_criteria.py  customer_card_view.py  employee.py  employee_criteria.py  employee_role.py  employee_view.py  product.py  product_archetype.py  product_archetype_criteria.py  product_archetype_view.py  product_category.py  product_category_criteria.py  product_category_view.py  product_criteria.py  product_view.py  receipt.py  receipt_criteria.py  receipt_item.py  receipt_item_view.py  receipt_view.py  sort_criteria.py
src/openapi_server/openapi/: openapi.yaml
src/src/: config.py  database.py  exceptions.py  main.py  models.py  schemas.py  utils.py
src/src/auth/: utils.py  (+10 more)
src/tests/: test_customer_card_api.py  test_employee_api.py  test_product_api.py  test_product_archetype_api.py  test_product_category_api.py  test_receipt_api.py
(+242 files in other folders)
