[metadata]
name = openapi_server
version = 1.0.0
description = API for systems used by the employees of Zlagoda shops
long_description = file: README.md
keywords = OpenAPI Zlagoda
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.11
install_requires =
    fastapi[all]
    psycopg[binary]
    yoyo-migrations
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
